tests/NormalTests/paczka1/fuzzy1/48145550.err
Error in line 9: jKHFwW S418 100,0
Error in line 1: 0b7ps2R3H A597 74,1
Error in line 13: 0b7ps2R3H A597 49,5
Error in line 14: 0b7ps2R3H S418 71,0
Error in line 25: RWIq A787 91,6
Error in line 15: BZ8Jos8gcAi A597 99,3
Error in line 3: A787 A787 11,5
